init style and components

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.png" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Insure landing page</title>
   </head>
   <body>
